# typedobject

./: .gitignore  CMakeLists.txt  OSXBUILD.rst  README.rst  UNIXBUILD.rst  WINBUILD.rst
cmake/: strip_libraries.cmake  typedobject-config.cmake  typedobjectConfig.cmake  typedobject_generate.cmake
doc/: WINBUILD.rst
include/typedobject/: .gitignore  rdf.h  rdfdefs.h  typedobject.h  utils.h  xsd.h
src/: CMakeLists.txt  aobject.cpp  aobject.h  bsml.cpp  factory.cpp  globals.h  rdf.cpp  rdf.h  rdfdefs.cpp  rdfdefs.h  rdfimpl.cpp  rdfimpl.h  typedobject.cpp  typedobject.h  units.cpp  utils.cpp  utils.h  xsd.cpp  xsdimpl.cpp  xsdimpl.h
src/bsml/: annotation.cpp  annotation.h  bsml.h  event.h  model.h  object.h  ontology.cpp  ontology.h  recording.cpp  recording.h  segment.h  signal.cpp  signal.h  timing.h
src/clang/: aoc.py  generate.py
src/rdf/: CMakeLists.txt  defs.cpp  defs.h  rdf.cpp  rdf.h
tests/: CMakeLists.txt  bsml.cpp  example.cpp  example.h  graph.cpp  rdf.cpp  sinewave.ttl  test1.ttl  types.cpp  types.h  units.cpp  unittest.cpp  utils.cpp  xsd.cpp
