find_package(PkgConfig)

pkg_check_modules(SORD QUIET sord-0)

set(INCLUDES ${INCLUDES} ${SORD_INCLUDE_DIRS})
add_definitions(${SORD_CFLAGS_OTHER})

set(LIBNUM 1)
foreach(LIBRARY_NAME ${SORD_LIBRARIES})
  find_library(LIBRARY${LIBNUM} ${LIBRARY_NAME} PATHS ${SORD_LIBRARY_DIRS})
  set(LIBS ${LIBS} ${LIBRARY${LIBNUM}})
  MATH(EXPR LIBNUM "${LIBNUM}+1")
endforeach()


pkg_check_modules(RAPTOR QUIET raptor2)

set(INCLUDES ${INCLUDES} ${RAPTOR_INCLUDE_DIRS})
add_definitions(${RAPTOR_CFLAGS_OTHER})

find_library(LIBRARY${LIBNUM} ${RAPTOR_LIBRARIES} PATHS ${RAPTOR_LIBRARY_DIRS})
set(LIBS ${LIBS} ${LIBRARY${LIBNUM}})


set(INCLUDE_DIRS ${INCLUDE_DIRS} ${INCLUDES} PARENT_SCOPE)
set(LIBRARIES ${LIBRARIES} ${LIBS} PARENT_SCOPE)

set(SOURCES ${SOURCES}
  ${CMAKE_CURRENT_SOURCE_DIR}/rdf.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/defs.cpp
  PARENT_SCOPE)

